Capstone/modules/ec2/main.tf
resource "aws_security_group" "ec2" {

  name = "ec2-sg"

  vpc_id = var.vpc_id

  ingress {

    from_port = 22

    to_port = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}


#EC2:

resource "aws_instance" "server" {

  ami = var.ami

  instance_type = var.instance_type

  subnet_id = var.subnet_id

  key_name = var.key_name

  associate_public_ip_address = true

  vpc_security_group_ids = [
    aws_security_group.ec2.id
  ]

  tags = {

    Name = "Demo-EC2"
  }
}
